# fastapi-root_path-issue

./: pyproject.toml
app/: main.py
tests/: conftest.py  test_views.py
