[tool.poetry]
name = "fastapi-root-path-issue"
version = "0.1.0"
description = ""
authors = ["Ivan Larin <pentusha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.1"
uvicorn = "^0.27.0.post1"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
